--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "chalk": "^5.3.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.5.0"
+    "mongoose": "^7.5.0",
+    "yonode": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
